* Changed confirmation mail template * Account confirmation now signs user in

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,4 +24,4 @@ en:
   email_us: Email Us
   devise:
     confirmations:
-      confirmed: "Your email address has been successfully confirmed. Click sign in and enter your credentials."
+      confirmed: "Your email address has been successfully confirmed. You are now logged into your new account."
